--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 *                     raider@urbanterror.info
 *
 *            You may use my codes any way you see fit
-*                 Crediting my work work be nice!
+*                 Crediting my work would be nice!
 *
 ****************************************************************/
 
@@ -21,17 +21,17 @@ FrozenSand Staff @ http://www.frozensand.com
 /* LINKS
 
 Urban Terror Website : http://www.urbanterror.info
-My Urban Terror Profile: http://www.urbanterror.info/~raider
+My Urban Terror Profile: http://urbanterror.info/members/profile/raider/
 
 /* CODER FRIENDS
 
-raedwulf: http://github.com/raedwulf & http://urbanterror.info/~raedwulf
-kalish: http://urbanterror.info/~kalish
-barbatos: http://urbanterror.info/~barbatos
-twentyseven: http://urbanterror.info/~twentyseven
+Raedwulf: http://github.com/raedwulf & http://urbanterror.info/members/profile/raedwulf/
+Kalish: http://urbanterror.info/members/profile/kalish/
+barbatos: http://urbanterror.info/members/profile/barbatos/
+TwentySeven: http://urbanterror.info/members/profile/twentyseven/
 
 /* THANKS
 
-Many thanks to the people at Team Frozen Sand & Urban Terror
+Many thanks to the people at Team FrozenSand & Urban Terror
 My Friends, Family
 Special Mentions to: Kalish, Decoy 
